syntax = "proto3";

package bank.accounts.v1;

//option go_package = "github.com/tagokoder/bank-contracts/genproto/bank/accounts/v1;accountsv1";
//option java_multiple_files = true;
//option java_package = "com.bank.accounts.v1";
option go_package = "github.com/imaginarybank/banking-contracts/gen/go/bank/accounts/v1;accountsv1";
option java_multiple_files = true;
option java_package = "bank.accounts.v1";
option java_outer_classname = "AccountsProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// =========================================================
// Services
// =========================================================

service CustomersService {
  // POST /customers
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);

  // PATCH /customers/{id}
  rpc PatchCustomer(PatchCustomerRequest) returns (PatchCustomerResponse);
}

service AccountsService {
  // GET /accounts?customer_id=...
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse);

  // POST /accounts
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);

  // GET /accounts/{id}/balances
  rpc GetAccountBalances(GetAccountBalancesRequest) returns (GetAccountBalancesResponse);

  // PATCH /accounts/{id}/limits
  rpc PatchAccountLimits(PatchAccountLimitsRequest) returns (PatchAccountLimitsResponse);

  rpc GetAccountByNumber(GetAccountByNumberRequest) returns (GetAccountByNumberResponse);
}

// INTERNAL (para ledger/payments) - proteger con mTLS/API key
service InternalAccountsService {
  // POST /internal/accounts/validate
  rpc ValidateAccountsAndLimits(ValidateAccountsAndLimitsRequest) returns (ValidateAccountsAndLimitsResponse);

  // POST /internal/accounts/{id}/hold/reserve
  rpc ReserveHold(ReserveHoldRequest) returns (ReserveHoldResponse);

  // POST /internal/accounts/{id}/hold/release
  rpc ReleaseHold(ReleaseHoldRequest) returns (ReleaseHoldResponse);

  rpc BatchGetAccountSummaries(BatchGetAccountSummariesRequest) returns (BatchGetAccountSummariesResponse);

}

// =========================================================
// Enums
// =========================================================

enum RiskSegment {
  RISK_SEGMENT_UNSPECIFIED = 0;
  RISK_SEGMENT_LOW = 1;
  RISK_SEGMENT_MEDIUM = 2;
  RISK_SEGMENT_HIGH = 3;
}

enum CustomerStatus {
  CUSTOMER_STATUS_UNSPECIFIED = 0;
  CUSTOMER_STATUS_ACTIVE = 1;
  CUSTOMER_STATUS_SUSPENDED = 2;
}

enum PreferenceChannel {
  PREFERENCE_CHANNEL_UNSPECIFIED = 0;
  PREFERENCE_CHANNEL_EMAIL = 1;
  PREFERENCE_CHANNEL_SMS = 2;
  PREFERENCE_CHANNEL_PUSH = 3;
}

enum ProductType {
  PRODUCT_TYPE_UNSPECIFIED = 0;
  PRODUCT_TYPE_CHECKING = 1;
  PRODUCT_TYPE_SAVINGS = 2;
}

// =========================================================
// Customers - Requests / Responses
// =========================================================

// Mapea CustomerCreateRequest
message CreateCustomerRequest {
  string full_name = 1;
  // OpenAPI: format date (YYYY-MM-DD). Se deja como string para evitar dependencia google.type.Date.
  string birth_date = 2;
  string tin = 3;
  RiskSegment risk_segment = 4; // si no envían, el server puede default a LOW
  string email = 5;
  string phone = 6;
  CustomerAddressCreate address = 7; // opcional

  string idempotency_key = 8;  // recomendado
  string external_ref = 9;     // ej: registration_id
}

message CustomerAddressCreate {
  // OpenAPI: country minLength=2 maxLength=2 (ISO-3166-1 alpha-2)
  string country = 1;
  string line1 = 2;
  string line2 = 3;
  string city = 4;
  string province = 5;
  string postal_code = 6;
}

message CreateCustomerResponse {
  string customer_id = 1; // uuid
}

// Mapea CustomerPatchRequest (nullable => wrappers)
message PatchCustomerRequest {
  string id = 1; // uuid (path param)

  google.protobuf.StringValue full_name = 2;
  RiskSegmentValue risk_segment = 3;
  CustomerStatusValue customer_status = 4;

  CustomerContactPatch contact = 5;
  PreferencesPatch preferences = 6;
}

// Para representar enum "nullable" / opcional de forma explícita.
message RiskSegmentValue {
  RiskSegment value = 1;
}

message CustomerStatusValue {
  CustomerStatus value = 1;
}

message CustomerContactPatch {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue phone = 2;
}

message PreferencesPatch {
  PreferenceChannelValue channel = 1;
  google.protobuf.BoolValue opt_in = 2;
}

message PreferenceChannelValue {
  PreferenceChannel value = 1;
}

message PatchCustomerResponse {
  string customer_id = 1; // uuid
}

// =========================================================
// Accounts - Requests / Responses
// =========================================================

// Mapea AccountCreateRequest
message CreateAccountRequest {
  string customer_id = 1; // uuid
  ProductType product_type = 2;
  // OpenAPI: currency minLength=3 maxLength=3 (ISO-4217)
  string currency = 3;
  string idempotency_key = 4;
  string external_ref = 5; // ej: registration_id + product_type
}

message CreateAccountResponse {
  string account_id = 1; // uuid
  string account_number = 2;
}

message ListAccountsRequest {
  string customer_id = 1; // uuid (query param)
}

message ListAccountsResponse {
  repeated AccountView accounts = 1;
}

message AccountView {
  string id = 1;          // uuid
  string customer_id = 2; // uuid
  string account_number = 3; // "000123..." (demo)
  string product_type = 4; // OpenAPI lo dejaba string; aquí puedes usar enum si quieres versionar (ver nota abajo)
  string currency = 5;
  string status = 6;
  google.protobuf.Timestamp opened_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  AccountBalances balances = 9;
}

message AccountBalances {
  double ledger = 1;
  double available = 2;
  double hold = 3;
}

message GetAccountBalancesRequest {
  string id = 1; // uuid (path param)
}

message GetAccountBalancesResponse {
  string account_id = 1; // uuid
  AccountBalances balances = 2;
}

// PATCH /accounts/{id}/limits
message PatchAccountLimitsRequest {
  string id = 1; // uuid (path param)

  // OpenAPI: nullable => wrappers
  google.protobuf.DoubleValue daily_out = 2;
  google.protobuf.DoubleValue daily_in = 3;
}

message PatchAccountLimitsResponse {
  string account_id = 1; // uuid
  double daily_out = 2;
  double daily_in = 3;
}

// =========================================================
// INTERNAL - Requests / Responses
// =========================================================

message ValidateAccountsAndLimitsRequest {
  string source_account_id = 1;      // uuid
  string destination_account_id = 2; // uuid
  string currency = 3;              // ISO-4217
  double amount = 4;
}

message ValidateAccountsAndLimitsResponse {
  bool ok = 1;
  google.protobuf.StringValue reason = 2;
}

message HoldRequest {
  string currency = 1; // ISO-4217
  double amount = 2;
  google.protobuf.StringValue reason = 3;
}

message ReserveHoldRequest {
  string id = 1; // uuid (path param) - account_id
  HoldRequest hold = 2;
  string hold_id = 3;         // UUID: idealmente payment_id o generated por ledger
  string idempotency_key = 4; // required para reintentos seguros
}

message ReleaseHoldRequest {
  string id = 1; // uuid (path param) - account_id
  HoldRequest hold = 2;
  string hold_id = 3;         // referencia exacta de lo reservado
  string idempotency_key = 4; // required
}

message ReserveHoldResponse {
  bool ok = 1;
  double new_hold = 2;
  string hold_id = 3;
  google.protobuf.StringValue status = 4; // reserved|duplicate|failed
}


message ReleaseHoldResponse {
  bool ok = 1;
  double new_hold = 2;
  google.protobuf.StringValue status = 3; // released|duplicate|failed
}

// ----------------------------------------------------
// Batch account summaries (for ledger enrichment)
// ----------------------------------------------------

message BatchGetAccountSummariesRequest {
  // lista de account_id (uuid). Para demo, puedes aceptar 1..200 por request.
  repeated string account_ids = 1;

  // opcional: si quieres retornar cuentas aunque estén "closed"/"blocked" etc.
  // Para demo puedes ignorarlo en server y siempre retornar si existe.
  google.protobuf.BoolValue include_inactive = 2;
}

message AccountSummary {
  string account_id = 1;        // uuid
  string account_number = 2;    // "000123..." (demo)
  ProductType product_type = 3; // CHECKING|SAVINGS
  string currency = 4;          // ISO-4217
  string status = 5;            // active|blocked|closed (string por simplicidad)
  string display_name = 6;      // nombre del titular (demo)
}

message MissingAccount {
  string account_id = 1;
  google.protobuf.StringValue reason = 2; // not_found|forbidden|inactive|...
}

message BatchGetAccountSummariesResponse {
  repeated AccountSummary accounts = 1;

  // Para que ledger pueda saber cuáles no se pudieron resolver sin fallar el call.
  repeated MissingAccount missing = 2;
}

// ----------------------------------------------------
// GetAccountByNumber
// ----------------------------------------------------

message GetAccountByNumberRequest {
  // puede venir "12345" o "000000012345"
  string account_number = 1;

  // opcional: si true, permite cuentas frozen (o futuras)
  google.protobuf.BoolValue include_inactive = 2;
}

message AccountLookup {
  string account_id = 1;        // uuid
  string customer_id = 2;       // uuid
  string account_number = 3;    // "000000012345"
  string display_name = 4;      // demo: nombre del titular (NO PII sensible extra)
  ProductType product_type = 5; // CHECKING|SAVINGS
  string currency = 6;
  string status = 7;            // active|frozen (string por simplicidad)
}

message GetAccountByNumberResponse {
  AccountLookup account = 1;
}